syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/workflows/wasm/v2/pb";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "values/pb/values.proto";
import "workflows/sdk/v2/pb/sdk.proto";

message TriggerSubscription {
  string execId = 1;
  string id = 2;
  google.protobuf.Any payload = 3;
  string method = 4;
}

message TriggerSubscriptionRequest {
  repeated TriggerSubscription subscriptions = 1;
}

message Trigger {
  string id = 1;
  google.protobuf.Any payload = 2;
}

message ExecuteRequest {
  string id = 1;
  bytes config = 2;
  oneof request {
    google.protobuf.Empty subscribe = 3;
    Trigger trigger = 4;
  }
  uint64 max_response_size = 5;
}

message ExecutionResult {
  string id = 1;
  oneof result {
    values.Value value = 2;
    string error = 3;
    TriggerSubscriptionRequest triggerSubscriptions = 4;
  }
}

message AwaitCapabilitiesRequest {
  string execId = 1;
  repeated string ids = 2;
}

message AwaitCapabilitiesResponse {
  map<string, cre.sdk.v2.CapabilityResponse> responses = 1;
}
